fix page overflow

--- a/frontend/src/styles/ReviewPage.css
+++ b/frontend/src/styles/ReviewPage.css
@@ -1,6 +1,5 @@
 .admin-page {
   padding: 0;
-  padding-top: 0px;
   box-sizing: border-box;
 
   display: flex;
@@ -8,6 +7,9 @@
 
   align-items: flex-start;
   justify-content: flex-start;
+
+  max-height: calc(100vh - var(--header-height));
+  overflow-y: scroll;
 }
 
 .admin-details {
@@ -942,7 +944,8 @@ textarea.technology-input {
   background: hsl(var(--card));
   border-radius: var(--radius);
   width: 100%;
-  max-height: 100%;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 @media screen and (max-width: 1200px) {
