--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -102,6 +102,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 button {
